2012-11-09 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* sfcBroker.c:
	[ 3528056 ] sfcbd --version doesn't always work

2012-11-07 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* trace.c:
	[ 3585274 ] Local connect kills tracing

2012-11-01 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerDrv.c, cmpiTestIndicationProvider.c:
	[ 3580137 ] Classname needed in *ActivateFilter

2012-10-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* instance.c, brokerUpc.c:
	[ 3582062 ] Various additional error checking

2012-10-24  Dave Heller <hellerda@us.ibm.com>

	* msgqueue.c
	[ 3579637 ] SFCB should check ftok return code

2012-10-05  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c, httpAdapter.c, indCIMXMLHandler.c,
	interopProvider.c, providerDrv.c, trace.h:
	[ 3574936 ] --disable-debug still allocates trace variables

2012-10-03  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c, queryStatement.c:
	[ 3573507 ] CreateInstance for IndicationFilter doesn't accept DMTF:CQL

2012-10-03 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/stageschema.sh:
	[ 3574169 ] revert interop2 stageschema

2012-09-13 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* sfcBroker.c, mlog.c:
	[ 3567450 ] Clients shouldn't cause log messages

2012-08-28  Dave Heller <hellerda@us.ibm.com>

	* indCIMXMLExport.c:
	[ 3562538 ] Enable curl debug via env variable

2012-08-08 Dave Heller <hellerda@us.ibm.com>

	* providerDrv.c:
	[ 3546279 ] Core dump in providerDrv on Qualifier not found

2012-08-08 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* httpAdapter.c, cimXmlRequest.c, cimXmlRequest.h, sfcBasicPAMAuthentication.c
	[ 3555395 ] Additional auth lib return codes

2012-07-29  Dave Heller <hellerda@us.ibm.com>

	* sfcb.init-none.in, sfcb.init-redhat.in, sfcb.init-suse.in:
	[ 3541554 ] insecure LD_LIBRARY_PATH usage

2012-07-20 Dave Heller <hellerda@us.ibm.com>

	* classProviderGz.c: