@@ -24,6 +24,7 @@ Bugs fixed:
 - 3580137 Classname needed in *ActivateFilter
 - 3585274 Local connect kills tracing
 - 3528056 sfcbd --version doesn't always work
+- 3381209 Memory leak inside getClass() used by invokeMethod()
 
 Changes in 1.3.15
 =================
